# mytorch

./: .gitignore  DESIGN.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml  test.py
core/: __init__.py  tensor.py
docs/: tensor.md
nn/: __init__.py  nn.py  optim.py  perceptron.py
nn/loss/: __init__.py  loss.py  square.py
random/: __init__.py  generator.py  rand.py
src/mytorch/: __init__.py
src/mytorch/core/: tensor.py
src/mytorch/nn/: __init__.py  nn.py
src/mytorch/random/: distributions.py
tests/: readme.md  run.py
tests/numericals/: __init__.py  additions.py  multiplication.py
