[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytorch"
version = "0.1.0"
description = "A educational tensor library"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name="log-prathm"}
]

dependencies = [

]

[tool.setuptools.packages.find]
where = ["src"]